# Hackathon2

./: .dockerignore  .env.backup  .gitignore  Dockerfile  IMPORT_ERRORS_RESOLVED.md  RAILWAY_DEPLOYMENT.md  RAILWAY_TROUBLESHOOTING.md  README.md  app.py  config.py  debug_env.py  deploy-railway.bat  deploy-railway.sh  deploy.bat  deploy.sh  env.example  nixpacks.toml  pyproject.toml  quick-deploy.bat  quick_fix.py  railway.env  railway.env.example  railway.json  railway.toml  railway_setup.md  requirements.txt  setup_env.py  test_db_connection.py  test_deployment.py  test_mysql_only.py
templates/: dashboard.html  edit_flashcard.html  generate_flashcards.html  index.html  login.html  pricing.html  signup.html  study_flashcards.html  verify_email.html
