[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduverse"
version = "1.0.0"
description = "AI-powered flashcard generation and study platform"
authors = [{name = "EduVerse Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3.0",
    "Flask-Mail>=0.9.0",
    "Flask-SQLAlchemy>=3.0.0",
    "Flask-Login>=0.6.0",
    "Flask-WTF>=1.1.0",
    "PyMySQL>=1.1.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "Werkzeug>=2.3.0",
    "requests>=2.31.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.108.0",
    "gunicorn>=21.2.0",
    "PyJWT>=2.8.0",
    "Authlib>=1.3.0",
    "intasend-python>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "types-requests",
    "types-PyMySQL",
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
